<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deadstrike.contactbook.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/main_icon"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="32dp"
                    android:text="@string/app_name"
                    android:textColor="#ffffff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:text="@string/autor_sign"
                    android:textColor="#ffffff"/>

                <TextView
                    android:id="@+id/sign_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#99ffffff"
                    android:layout_marginTop="32dp"
                    android:text="@string/signed_out"/>
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/sign_out_and_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">

                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_continue"/>
                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_sign_out"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
